--- a/notebook/shapelet.ipynb
+++ b/notebook/shapelet.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,23 @@
     "            shapelet_str = ', '.join(map(str, shapelet))\n",
     "            writer.writerow([shapelet_str, val_ig])\n",
     "\n",
-    "    print(f\"Data saved to {csv_file_path}\")"
+    "    print(f\"Data saved to {csv_file_path}\")\n",
+    "\n",
+    "def loadShapeletFromCsv(file='series_a'):\n",
+    "    csv_file_path = f'{file}.csv'\n",
+    "    shapelets = []\n",
+    "\n",
+    "    # Open the CSV file in read mode\n",
+    "    with open(csv_file_path, mode='r') as file:\n",
+    "        reader = csv.DictReader(file)\n",
+    "        \n",
+    "        for row in reader:\n",
+    "            shapelet_str = row['shapelet']\n",
+    "            ig = float(row['ig'])  # Convert 'ig' to float\n",
+    "            shapelet = list(map(float, shapelet_str.split(', ')))  # Convert shapelet string back to list of floats\n",
+    "            shapelets.append({'shapelet': shapelet, 'IG': ig})\n",
+    "    \n",
+    "    return shapelets"
    ]
   },
   {
@@ -4449,7 +4465,7 @@
     "print('Candidate',len(shapelet_candidates_A))\n",
     "print('Assesment',len(valid_shapelets_array_A))\n",
     "print(valid_shapelets_array_A[0])\n",
-    "saveValidShapeletAsCsv('series_a', valid_shapelets_array_A)"
+    "saveValidShapeletAsCsv('../output/shapelet/series_a', valid_shapelets_array_A)"
    ]
   },
   {
@@ -8073,25 +8089,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Candidate 3387\n",
-      "Assesment 3387\n",
-      "{'shapelet': array([0.00270944, 0.0027139 , 0.00270522, 0.00269676, 0.00268777]), 'IG': 5.9062284649802343e-05}\n",
-      "Data saved to series_f.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Candidate',len(shapelet_candidates_F))\n",
     "print('Assesment',len(valid_shapelets_array_F))\n",
     "print(valid_shapelets_array_F[0])\n",
-    "saveValidShapeletAsCsv('series_f', valid_shapelets_array_F)"
+    "saveValidShapeletAsCsv('../output/shapelet/series_f', valid_shapelets_array_F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_shapelets_array_A = loadShapeletFromCsv('../output/shapelet/series_a')\n",
+    "valid_shapelets_array_F = loadShapeletFromCsv('../output/shapelet/series_f')"
    ]
   },
   {
@@ -8103,7 +8118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -8112,9 +8127,8 @@
        "12"
       ]
      },
-     "execution_count": 68,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -8125,7 +8139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -8134,9 +8148,8 @@
        "16"
       ]
      },
-     "execution_count": 72,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -8222,10 +8235,10 @@
     "combined_shapelets_F = np.concatenate([entry['shapelet'] for entry in discover_F])\n",
     "\n",
     "df_c_A = pd.DataFrame(combined_shapelets_A, columns=['mag'])\n",
-    "df_c_A.to_csv('../output/combined_shapelets_A.csv', index=False)\n",
+    "df_c_A.to_csv('../output/shapelet/combined_shapelets_A.csv', index=False)\n",
     "\n",
     "df_c_F = pd.DataFrame(combined_shapelets_F, columns=['mag'])\n",
-    "df_c_F.to_csv('../output/combined_shapelets_F.csv', index=False)\n"
+    "df_c_F.to_csv('../output/shapelet/combined_shapelets_F.csv', index=False)\n"
    ]
   },
   {
@@ -8246,7 +8259,8 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScale\n",
+    "r\n",
     "\n",
     "# Step 2: Shapelet Distance Calculation (Squared Euclidean Distance)\n",
     "def euclidean_distance_squared(x, y):\n",
@@ -8395,28 +8409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Unable to coerce list of <class 'numpy.ndarray'> to Series/DataFrame",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[103], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ts1_d \u001b[38;5;241m=\u001b[39m \u001b[43mcalculate_distances_to_shapelet\u001b[49m\u001b[43m(\u001b[49m\u001b[43mts1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshapelet_candidates_A\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[9], line 53\u001b[0m, in \u001b[0;36mcalculate_distances_to_shapelet\u001b[1;34m(time_series, shapelet)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;124;03mCalculate the distance between each subsequence of the time series and the shapelet.\u001b[39;00m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;124;03m    np.array: Array of distances between subsequences and the shapelet.\u001b[39;00m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     52\u001b[0m shapelet_len \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(shapelet)\n\u001b[1;32m---> 53\u001b[0m distances \u001b[38;5;241m=\u001b[39m [euclidean_distance_squared(time_series[i:i \u001b[38;5;241m+\u001b[39m shapelet_len], shapelet) \n\u001b[0;32m     54\u001b[0m              \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(time_series) \u001b[38;5;241m-\u001b[39m shapelet_len \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)]\n\u001b[0;32m     55\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(distances)\n",
-      "Cell \u001b[1;32mIn[9], line 53\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;124;03mCalculate the distance between each subsequence of the time series and the shapelet.\u001b[39;00m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;124;03m    np.array: Array of distances between subsequences and the shapelet.\u001b[39;00m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     52\u001b[0m shapelet_len \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(shapelet)\n\u001b[1;32m---> 53\u001b[0m distances \u001b[38;5;241m=\u001b[39m [\u001b[43meuclidean_distance_squared\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtime_series\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m:\u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mshapelet_len\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshapelet\u001b[49m\u001b[43m)\u001b[49m \n\u001b[0;32m     54\u001b[0m              \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(time_series) \u001b[38;5;241m-\u001b[39m shapelet_len \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)]\n\u001b[0;32m     55\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(distances)\n",
-      "Cell \u001b[1;32mIn[9], line 39\u001b[0m, in \u001b[0;36meuclidean_distance_squared\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21meuclidean_distance_squared\u001b[39m(x, y):\n\u001b[0;32m     29\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;124;03m    Compute the squared Euclidean distance between two time series subsequences.\u001b[39;00m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;124;03m    \u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;124;03m        float: Squared Euclidean distance between subsequences x and y.\u001b[39;00m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 39\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39msum((\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m) \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\pandas\\core\\ops\\common.py:65\u001b[0m, in \u001b[0;36m_unpack_zerodim_and_defer.<locals>.new_method\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     61\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mNotImplemented\u001b[39m\n\u001b[0;32m     63\u001b[0m other \u001b[38;5;241m=\u001b[39m item_from_zerodim(other)\n\u001b[1;32m---> 65\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmethod\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mother\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\pandas\\core\\arraylike.py:97\u001b[0m, in \u001b[0;36mOpsMixin.__sub__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[38;5;129m@unpack_zerodim_and_defer\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__sub__\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__sub__\u001b[39m(\u001b[38;5;28mself\u001b[39m, other):\n\u001b[1;32m---> 97\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_arith_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mother\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moperator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msub\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\pandas\\core\\frame.py:5980\u001b[0m, in \u001b[0;36mDataFrame._arith_method\u001b[1;34m(self, other, op)\u001b[0m\n\u001b[0;32m   5976\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ops\u001b[38;5;241m.\u001b[39mframe_arith_method_with_reindex(\u001b[38;5;28mself\u001b[39m, other, op)\n\u001b[0;32m   5978\u001b[0m axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m  \u001b[38;5;66;03m# only relevant for Series other case\u001b[39;00m\n\u001b[1;32m-> 5980\u001b[0m \u001b[38;5;28mself\u001b[39m, other \u001b[38;5;241m=\u001b[39m \u001b[43mops\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43malign_method_FRAME\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mother\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflex\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m   5982\u001b[0m new_data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dispatch_frame_op(other, op, axis\u001b[38;5;241m=\u001b[39maxis)\n\u001b[0;32m   5983\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_construct_result(new_data)\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\pandas\\core\\ops\\__init__.py:258\u001b[0m, in \u001b[0;36malign_method_FRAME\u001b[1;34m(left, right, axis, flex, level)\u001b[0m\n\u001b[0;32m    255\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_list_like(right) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(right, (ABCSeries, ABCDataFrame)):\n\u001b[0;32m    256\u001b[0m     \u001b[38;5;66;03m# GH 36702. Raise when attempting arithmetic with list of array-like.\u001b[39;00m\n\u001b[0;32m    257\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(is_array_like(el) \u001b[38;5;28;01mfor\u001b[39;00m el \u001b[38;5;129;01min\u001b[39;00m right):\n\u001b[1;32m--> 258\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    259\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnable to coerce list of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(right[\u001b[38;5;241m0\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m to Series/DataFrame\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    260\u001b[0m         )\n\u001b[0;32m    261\u001b[0m     \u001b[38;5;66;03m# GH17901\u001b[39;00m\n\u001b[0;32m    262\u001b[0m     right \u001b[38;5;241m=\u001b[39m to_series(right)\n",
-      "\u001b[1;31mValueError\u001b[0m: Unable to coerce list of <class 'numpy.ndarray'> to Series/DataFrame"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ts1_d = calculate_distances_to_shapelet(ts1, shapelet_candidates_A)"
    ]
